--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "goit-react-hw-08-phonebook",
   "dependencies": {
+    "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@reduxjs/toolkit": "^1.9.2",
@@ -11,12 +12,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.2.6",
+    "framer-motion": "^9.0.1",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.6",
     "web-vitals": "^3.1.1"
   },
   "scripts": {
